text position fixed on mobile

--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ body {
     opacity: 1;
     position: absolute;
     top: 50%;
-    left: 42%;
+    left: 40%;
     z-index: 4;
   }
 }
